feat(array): 添加flatten(扁平化)方法

--- a/biome.json
+++ b/biome.json
@@ -21,6 +21,9 @@
         "noExplicitAny": "off",
         "noExtraNonNullAssertion": "error",
         "noConsoleLog": "warn"
+      },
+      "performance": {
+        "noAccumulatingSpread": "off"
       }
     }
   },
