feat(window): 添加copyText(复制文本)方法

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.0",
+    "@happy-dom/global-registrator": "^14.7.1",
     "@types/bun": "latest",
     "bun-plugin-dts": "^0.2.3",
     "standard-version": "^9.5.0"
