--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,12 @@
 {
+  "files": {
+    "ignore": ["dist"]
+  },
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "organizeImports": {
     "enabled": true
   },
   "linter": {
-    "ignore": ["dist"],
     "enabled": true,
     "rules": {
       "recommended": true,
@@ -38,7 +40,6 @@
     "formatWithErrors": false,
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineWidth": 80,
-    "ignore": ["dist"]
+    "lineWidth": 80
   }
 }
