--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
   },
   "scripts": {
     "build": "bun run scripts/build.ts",
-    "pub": "standard-version && npm publish"
+    "pub": "standard-version && npm publish",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.0",
     "@happy-dom/global-registrator": "^14.7.1",
     "@types/bun": "latest",
     "bun-plugin-dts": "^0.2.3",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "vitepress": "^1.1.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
