--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "一款零依赖、实用的Javascript/Typescript工具库",
   "type": "module",
   "main": "dist/index.js",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "types": "dist/index.d.ts",
   "author": "renzp <1074720760.qq.com>",
   "repository": {
@@ -17,9 +15,7 @@
   "bugs": {
     "url": "https://github.com/renzp94/utils/issues"
   },
-  "keywords": [
-    "utils"
-  ],
+  "keywords": ["utils"],
   "license": "MIT",
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
@@ -28,6 +24,7 @@
   "scripts": {
     "build": "bun run scripts/build.ts",
     "pub": "standard-version && npm publish",
+    "pub:jsr": "bun run scripts/pub-jsr.ts",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
