--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "coverage": "bun run scripts/coverage.ts"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.7.0",
-    "@happy-dom/global-registrator": "^14.7.1",
+    "@biomejs/biome": "^1.8.0",
+    "@happy-dom/global-registrator": "^14.12.0",
     "@type-challenges/utils": "^0.1.1",
-    "@types/bun": "latest",
+    "@types/bun": "^1.1.3",
     "bun-plugin-dts": "^0.2.3",
     "standard-version": "^9.5.0",
-    "vitepress": "^1.1.3"
+    "vitepress": "^1.2.3"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.4.5"
   }
 }
