chore: 调整打包目标降级为es6

--- a/.versionrc
+++ b/.versionrc
@@ -48,7 +48,7 @@
     {
       "type": "build",
       "section": "构建",
-      "hidden": false
+      "hidden": true
     },
     {
       "type": "ci",
