ci: 调整Coverage触发时机

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,10 +1,7 @@
-name: Docs Deploy
+name: Coverage Deploy
 on:
   push:
-    branches: main
     tags: "v*"
-  pull_request:
-    branches: main
 
 jobs:
   deploy:
