ci: 调整docs触发时机

--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,11 +1,9 @@
 name: Docs Deploy
 on:
   push:
-    branches: main
     paths: "docs/**"
-    tags: "v*"
   pull_request:
-    branches: main
+    paths: "docs/**"
 
 jobs:
   deploy:
