--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,9 +1,9 @@
 name: Docs Deploy
 on:
   push:
-    paths: "docs/**"
+    branches: main
   pull_request:
-    paths: "docs/**"
+    branches: main
 
 jobs:
   deploy:
